--- a/recipe-buddy/src/App.css
+++ b/recipe-buddy/src/App.css
@@ -77,18 +77,52 @@
   filter: initial;
 }
 
-.SearchField {
-  margin-bottom: 1rem;
-  text-align: center;
+.SearchBar {
+  display: grid;
+  grid-template-areas:
+    ". a ."
+    "b c d"
+    "e g f";
 }
 
-.SearchField input {
+label,
+input,
+select {
+  display: block;
+  font-family: Poppins;
+  font-weight: 600;
+}
+
+input:not([type="submit"], [type="text"]),
+select {
   width: 10rem;
-  height: 2rem;
 }
 
-.SearchField button {
-  margin-left: 0.5rem;
+input[type="text"] {
+  width: 20rem;
+  grid-area: a;
+}
+
+label:nth-of-type(2) {
+  grid-area: b;
+}
+
+label:nth-of-type(3) {
+  grid-area: c;
+}
+
+label:nth-of-type(4) {
+  grid-area: d;
+}
+
+input[type="submit"] {
+  width: 7rem;
+  grid-area: g;
+  margin-left: auto;
+  margin-right: auto;
+  height: 3rem;
+  border-radius: 20px;
+  cursor: pointer;
 }
 
 .Ingredients {
